--- a/app/src/main/res/layout/fragment_size_edit_text.xml
+++ b/app/src/main/res/layout/fragment_size_edit_text.xml
@@ -20,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@{hint}"
+        tools:hint="Length"
         app:suffixText="cm">
 
         <com.leebeebeom.closetnote.ui.view.CustomEditText
@@ -28,8 +29,7 @@
             android:layout_height="?myEditTextHeight"
             android:imeOptions="actionNext"
             android:inputType="numberDecimal"
-            android:text="@={text}"
-            tools:text="@string/size_length" />
+            android:text="@={text}" />
     </com.google.android.material.textfield.TextInputLayout>
 
 </layout>
