--- a/app/src/main/res/layout/fragment_size_include_basic_info_2.xml
+++ b/app/src/main/res/layout/fragment_size_include_basic_info_2.xml
@@ -49,7 +49,8 @@
             android:text="@string/size_move"
             android:textColor="?myColorControl"
             app:backgroundTint="?myBackgroundGrey"
-            app:fontFamily="@font/sc_dream4"
+            android:textSize="@dimen/_10sdp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/linkLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_weight="1"
@@ -66,15 +67,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/linkLayout">
 
-            <com.leebeebeom.closetnote.ui.view.CustomEditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etMemo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:imeOptions="actionDone"
                 android:inputType="textMultiLine"
+                android:textSize="@dimen/_11sdp"
                 android:minHeight="?myEditTextHeight"
                 android:text="@={model.sizeLive.memo}" />
         </com.google.android.material.textfield.TextInputLayout>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
