--- a/app/src/main/res/layout/fragment_size_include_cardview.xml
+++ b/app/src/main/res/layout/fragment_size_include_cardview.xml
@@ -15,7 +15,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/cardView"
@@ -25,6 +25,7 @@
             android:layout_marginHorizontal="@dimen/_2sdp"
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_4sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:onClick="@{() -> fragment.getImage()}"
             app:layout_constraintDimensionRatio="3:4"
             app:layout_constraintEnd_toEndOf="parent"
