Fab 엘리베이션 추가

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -22,7 +22,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?attr/backgroundGrey">
+            android:background="?attr/myBackgroundGrey">
 
             <com.mikhaellopez.circularimageview.CircularImageView
                 android:id="@+id/profileImage"
