--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,7 @@
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:elevation="0dp"
+            app:elevation="@dimen/_1sdp"
             app:layout_anchor="@id/bottomAppBar"
             app:tint="?colorPrimary"
             tools:src="@drawable/icon_add"
