--- a/app/src/main/res/layout/fragment_size.xml
+++ b/app/src/main/res/layout/fragment_size.xml
@@ -54,6 +54,8 @@
                 layout="@layout/fragment_size_include_basic_info_1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                app:fragment="@{fragment}"
+                app:model="@{model}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/time" />
