--- a/app/src/main/res/layout/fragment_setting_etc.xml
+++ b/app/src/main/res/layout/fragment_setting_etc.xml
@@ -12,48 +12,21 @@
 
         <com.google.android.material.textview.MaterialTextView
             style="@style/myFragmentSubTextView"
-            android:id="@+id/tvGlobal"
+            android:id="@+id/tvEtc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/setting_global"
+            android:text="@string/setting_etc"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.card.MaterialCardView
             style="@style/mySettingCardView"
-            android:id="@+id/cardViewTheme"
             android:layout_width="0dp"
             android:layout_height="?mySettingCardViewHeight"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvGlobal">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <com.google.android.material.textview.MaterialTextView
-                    style="@style/mySettingTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/setting_theme"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <include layout="@layout/fragment_setting_include_arrow_icon" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            style="@style/mySettingCardView"
-            android:id="@+id/cardViewNetwork"
-            android:layout_width="0dp"
-            android:layout_height="?mySettingCardViewHeight"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cardViewTheme">
+            app:layout_constraintTop_toBottomOf="@id/tvEtc">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -63,12 +36,12 @@
                     style="@style/mySettingTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/setting_network"
+                    android:text="@string/setting_contact"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <include layout="@layout/fragment_setting_include_arrow_icon" />
+                <include layout="@layout/fragment_setting_arrow_icon" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
