--- a/app/src/main/res/navigation/nav_graph_add_category.xml
+++ b/app/src/main/res/navigation/nav_graph_add_category.xml
@@ -6,7 +6,7 @@
     <dialog
         android:id="@+id/addCategoryDialog"
         android:name="com.leebeebeom.closetnote.ui.dialog.eidttext.add.category.AddCategoryDialog"
-        android:label="AddCategoryDialog">
+        android:label="">
         <argument
             android:name="parentIndex"
             app:argType="integer" />
@@ -18,6 +18,6 @@
     <dialog
         android:id="@+id/addSameCategoryNameDialog"
         android:name="com.leebeebeom.closetnote.ui.dialog.eidttext.add.category.AddSameCategoryNameDialog"
-        android:label="AddSameNameCategoryDialog" />
+        android:label="" />
 
 </navigation>
