--- a/app/src/main/res/navigation/nav_graph_edit_folder_name.xml
+++ b/app/src/main/res/navigation/nav_graph_edit_folder_name.xml
@@ -6,7 +6,7 @@
     <dialog
         android:id="@+id/editFolderNameDialog"
         android:name="com.leebeebeom.closetnote.ui.dialog.eidttext.edit.folder.EditFolderNameDialog"
-        android:label="EditFolderNameDialog">
+        android:label="">
         <argument
             android:name="id"
             app:argType="long" />
@@ -25,5 +25,5 @@
     <dialog
         android:id="@+id/editSameFolderNameDialog"
         android:name="com.leebeebeom.closetnote.ui.dialog.eidttext.edit.folder.EditSameFolderNameDialog"
-        android:label="EditSameFolderNameDialog" />
+        android:label="" />
 </navigation>
