--- a/app/src/main/res/navigation/nav_graph_tree_view.xml
+++ b/app/src/main/res/navigation/nav_graph_tree_view.xml
@@ -7,7 +7,7 @@
     <dialog
         android:id="@+id/treeViewDialog"
         android:name="com.leebeebeom.closetnote.ui.dialog.tree.TreeViewDialog"
-        android:label="TreeViewDialog">
+        android:label="">
         <argument
             android:name="parentIndex"
             app:argType="integer" />
@@ -52,7 +52,7 @@
     <dialog
         android:id="@+id/moveFolderAndSizeDialog"
         android:name="com.leebeebeom.closetnote.ui.dialog.MoveFolderAndSizeDialog"
-        android:label="MoveFolderAndSizeDialog">
+        android:label="">
         <argument
             android:name="selectedFolderIds"
             app:argType="long[]" />
